--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
 bibtexparser==1.2.0
+Brotli==1.0.9
 dj-database-url==0.5.0
 Django==4.0.5
 django-environ==0.9.0
