--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ Brotli==1.0.9
 dj-database-url==0.5.0
 Django==4.0.5
 django-environ==0.9.0
-frontmatter==3.0.7
+python-frontmatter==3.0.7
 future==0.18.2
 gunicorn==20.1.0
 importlib-metadata==4.12.0
