--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,17 @@ asgiref==3.5.2
 backports.zoneinfo==0.2.1
 bibtexparser==1.2.0
 Brotli==1.0.9
+certifi==2022.6.15
+cffi==1.15.1
+charset-normalizer==2.1.0
+Deprecated==1.2.13
 dj-database-url==0.5.0
 Django==4.0.5
 django-environ==0.9.0
 python-frontmatter
 future==0.18.2
 gunicorn==20.1.0
+idna==3.3
 importlib-metadata==4.12.0
 linkify==1.4
 linkify-it-py==2.0.0
@@ -18,11 +23,18 @@ mdurl==0.1.1
 mistune==2.0.3
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
+pycparser==2.21
+PyGithub==1.55
+PyJWT==2.4.0
 pymdown-extensions==9.5
+PyNaCl==1.5.0
 pyparsing==3.0.9
 python-frontmatter==1.0.0
 PyYAML==5.1
+requests==2.28.1
 sqlparse==0.4.2
 uc-micro-py==1.0.1
+urllib3==1.26.10
 whitenoise==6.2.0
+wrapt==1.14.1
 zipp==3.8.0
