--- a/research_notes/.env
+++ b/research_notes/.env
@@ -7,4 +7,4 @@ PROJECT_EMAIL=testmestforbest@mailer.com
 PROJECT_PASSWORD=192816
 SECRET_KEY=ctc@mx-9tb-a*s*9xfo)3*r@6#@$$hnfr*x!&00*o01$0yzm@_
 SESSION_COOKIE_AGE=3600
-DEBUG=True
+DEBUG=False
